--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
         <button class="my-btn" id="class-jumex">Jumex Mango</button>
     </div>
     <div style="margin:20px 0;">
-        <button class="my-btn" id="add-images">Add images</button>
+        <input class="my-btn" id="add-images" type="file" multiple/>
+        <!--<button class="my-btn" id="add-images">Add images</button>-->
         <select id="drop-down-elem">
             <option value="0">Coca-cola</option>
             <option value="1">Andatti</option>
