Trainer working with buttons

--- a/index.html
+++ b/index.html
@@ -12,17 +12,19 @@
 </head>
 
 <body>
-    <!--<div id="console"></div>-->
+    <div id="console"></div>
     <!-- Add an image that we will use to test -->
     <!--<img id="img" crossorigin src="https://i.imgur.com/JlUvsxa.jpg" width="227" height="227"/>-->
-    <video autoplay playsinline muted id="webcam" width="600" height="400"></video>
+    <div style="margin: 20px; 0; text-align:center;">
+        <video autoplay playsinline muted id="webcam" width="600" height="400" style="margin:0 auto;"></video>
+    </div>
     <div style="display:block;">
         <button class="my-btn" id="class-coca">Coca-cola</button>
         <button class="my-btn" id="class-andatti">Andatti</button>
         <button class="my-btn" id="class-coca-zero">Coca-cola Zero</button>
         <button class="my-btn" id="class-sabritas">Sabritas</button>
         <button class="my-btn" id="class-emperador">Emperador</button>
-        <button class="my-btn" id="class-hershey">Hersheys</button>
+        <button class="my-btn" id="class-hersheys">Hersheys</button>
         <button class="my-btn" id="class-panditas">Panditas</button>
         <button class="my-btn" id="class-donitas">Donitas Bimbo</button>
         <button class="my-btn" id="class-maruchan">Maruchan</button>
