--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <!--<div id="console"></div>-->
+    <div id="console"></div>
     <!-- Add an image that we will use to test -->
     <!--<img id="img" crossorigin src="https://i.imgur.com/JlUvsxa.jpg" width="227" height="227"/>-->
     <video autoplay playsinline muted id="webcam" width="600" height="400"></video>
