--- a/trainer/index.html
+++ b/trainer/index.html
@@ -18,6 +18,9 @@
     <div style="margin: 20px; 0; text-align:center;">
         <video autoplay playsinline muted id="webcam" width="600" height="400" style="margin:0 auto;"></video>
     </div>
+    <div>
+        
+    </div>
     <div style="display:block;">
         <button class="my-btn" id="class-coca">Coca-cola</button>
         <button class="my-btn" id="class-andatti">Andatti</button>
