--- a/trainer/index.html
+++ b/trainer/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="trainer/css/styles.css">
 
 
 
@@ -15,7 +15,7 @@
     <div id="console"></div>
     <!-- Add an image that we will use to test -->
     <!--<img id="img" crossorigin src="https://i.imgur.com/JlUvsxa.jpg" width="227" height="227"/>-->
-    <div style="margin: 20px; 0; text-align:center;">
+    <div style="margin: 20px 0; text-align:center;">
         <video autoplay playsinline muted id="webcam" width="600" height="400" style="margin:0 auto;"></video>
     </div>
     <div>
@@ -67,7 +67,7 @@
     <script src="https://unpkg.com/@tensorflow/tfjs"></script>
     <script src="https://unpkg.com/@tensorflow-models/mobilenet"></script>
     <script src="https://unpkg.com/@tensorflow-models/knn-classifier"></script>
-    <script src="js/index.js"></script>
+    <script src="trainer/js/index.js"></script>
 </body>
 
 </html>
