--- a/trainer/index.html
+++ b/trainer/index.html
@@ -12,6 +12,14 @@
 </head>
 
 <body>
+    <ul class="nav">
+        <li class="nav-item">
+            <a class="nav-link active" href="#">Trainer</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/recognizer">Recognizer</a>
+        </li>
+    </ul>
     <div id="console"></div>
     <!-- Add an image that we will use to test -->
     <!--<img id="img" crossorigin src="https://i.imgur.com/JlUvsxa.jpg" width="227" height="227"/>-->
@@ -19,7 +27,7 @@
         <video autoplay playsinline muted id="webcam" width="600" height="400" style="margin:0 auto;"></video>
     </div>
     <div>
-        
+
     </div>
     <div style="display:block;">
         <button class="my-btn" id="class-coca">Coca-cola</button>
@@ -34,7 +42,7 @@
         <button class="my-btn" id="class-jumex">Jumex Mango</button>
     </div>
     <div style="margin:20px 0;">
-        <input class="my-btn" id="add-images" type="file" multiple/>
+        <input class="my-btn" id="add-images" type="file" multiple />
         <!--<button class="my-btn" id="add-images">Add images</button>-->
         <select id="drop-down-elem">
             <option value="0">Coca-cola</option>
