--- a/recognizer/index.html
+++ b/recognizer/index.html
@@ -29,12 +29,12 @@
 
     <div class="container" style="width:100%; padding:0; max-width:98vw;">
         <div class="row">
-            <div class="col-5">
+            <div class="col-lg-12 col-xl-5">
                 <div id='divVideo'>
                     <video autoplay playsinline muted id="webcam" width="600" height="400"></video>
                 </div>
             </div>
-            <div class="col" style="border:solid; margin:0 50px;">
+            <div class="col-xl-5 col-lg-12 offset-xl-1" style="border:solid;">
                 <div id='fotos'>
                 </div>
                 <div id="total"></div>
