--- a/recognizer/index.html
+++ b/recognizer/index.html
@@ -35,25 +35,26 @@
                 </div>
             </div>
             <div class="col-xl-5 col-lg-12 offset-xl-1">
-                <table class="table-dark" style="width:100%; opacity:0.8">
-                    <thead>
+                <table class="table" style="background-color: white;width:100%; opacity:0.8">
+                    <thead style="background-color:#444444; color: white;">
                         <tr>
-                            <th scope="col">#</th>
+                            <th scope="col" style="text-align: center;">#</th>
                             <th scope="col">Nombre</th>
                             <th scope="col">Precio</th>
                             <th scope="col">Cantidad</th>
+                            <th scope="col"></th>
                             <th scope="col"></th>
                         </tr>
                     </thead>
                     <tbody id="productId">
                         <tr>
-                            <th>1</th>
+                            <th style="background-color:#444444; color: white; text-align: center;">1</th>
                             <td>Mark</td>
                             <td>Otto</td>
                             <td>@mdo</td>
-                            <td> <button type="button" class="btn btn-secondary" id="increase-0">+</button>
-                                <button type="button" class="btn btn-secondary" id="decrease-0">-</button>
+                            <td>
                             </td>
+                            <td></td>
                         </tr>
                     </tbody>
                 </table>
