--- a/trainer/index.html
+++ b/trainer/index.html
@@ -40,6 +40,7 @@
         <button class="my-btn" id="class-donitas">Donitas Bimbo</button>
         <button class="my-btn" id="class-maruchan">Maruchan</button>
         <button class="my-btn" id="class-jumex">Jumex Mango</button>
+        <button class="my-btn" id="class-background">Background</button>
     </div>
     <div style="margin:20px 0;">
         <input class="my-btn" id="add-images" type="file" multiple />
@@ -55,6 +56,7 @@
             <option value="7">Donitas Bimbo</option>
             <option value="8">Maruchan</option>
             <option value="9">Jumex Mango</option>
+            <option value="10">Background</option>
         </select>
     </div>
     <!--<button id="class-b">Add B</button>
