Todo a base del json

--- a/trainer/index.html
+++ b/trainer/index.html
@@ -29,7 +29,7 @@
     <div>
 
     </div>
-    <div style="display:block;">
+    <!--<div style="display:block;">
         <button class="my-btn" id="class-coca">Coca-cola</button>
         <button class="my-btn" id="class-andatti">Andatti</button>
         <button class="my-btn" id="class-coca-zero">Coca-cola Zero</button>
@@ -41,22 +41,12 @@
         <button class="my-btn" id="class-maruchan">Maruchan</button>
         <button class="my-btn" id="class-jumex">Jumex Mango</button>
         <button class="my-btn" id="class-background">Background</button>
-    </div>
+    </div>-->
     <div style="margin:20px 0;">
-        <input class="my-btn" id="add-images" type="file" multiple />
+        <button class="my-btn" id="add-class">Añadir clase</button>
         <!--<button class="my-btn" id="add-images">Add images</button>-->
         <select id="drop-down-elem">
-            <option value="0">Coca-cola</option>
-            <option value="1">Andatti</option>
-            <option value="2">Coca-cola Zero</option>
-            <option value="3">Sabritas</option>
-            <option value="4">Emperador</option>
-            <option value="5">Hershey's</option>
-            <option value="6">Panditas</option>
-            <option value="7">Donitas Bimbo</option>
-            <option value="8">Maruchan</option>
-            <option value="9">Jumex Mango</option>
-            <option value="10">Background</option>
+
         </select>
     </div>
     <!--<button id="class-b">Add B</button>
