All training sets ready
Dataset ready for presentation

--- a/trainer/index.html
+++ b/trainer/index.html
@@ -52,6 +52,8 @@
     <!--<button id="class-b">Add B</button>
     <button id="class-c">Add C</button>-->
     <div style="margin-top:20px;">
+      <button type="button" class="btn btn-secondary" id="class-background">Add background</button>
+
         <button class="my-btn" id="savemodel">Save model</button>
     </div>
     <!-- Load index.js after the content of the page -->
