Scroll with small bug
There is now a scroll without scrolling header but there is a small line above the header

--- a/trainer/images/recognizer.html
+++ b/trainer/images/recognizer.html
@@ -33,9 +33,9 @@
                     <video autoplay playsinline muted id="webcam" width="600" height="400"></video>
                 </div>
             </div>
-            <div class="col-xl-5 col-lg-12 offset-xl-1 tableFix" style="margin-top:70px;">
+            <div class="col-xl-5 col-lg-12 offset-xl-1" style="margin-top:70px;">
                 <table class="table" style="background-color: white;width:100%; opacity:0.8">
-                    <thead>
+                    <thead style="background-color:#444444; color: white;">
                         <tr>
                             <th scope="col" style="text-align: center;">#</th>
                             <th scope="col">Nombre</th>
@@ -45,9 +45,9 @@
                             <th scope="col"></th>
                         </tr>
                     </thead>
-                      <tbody id="productId">
+                    <tbody id="productId" style="max-height:80vh;overflow-y:auto;">
 
-                      </tbody>
+                    </tbody>
                 </table>
             </div>
         </div>
