Table is finished
Table is now complete with the corresponding scroll bar and fixed head and foot

--- a/recognizer/index.html
+++ b/recognizer/index.html
@@ -35,7 +35,7 @@
             </div>
             <div class="col-xl-5 col-lg-12 offset-xl-1 tableFix" style="margin-top:70px;">
                 <table class="table" style="background-color: white;width:100%; opacity:0.8">
-                    <thead>
+                    <thead style="text-align:center">
                         <tr>
                             <th scope="col" style="text-align: center;">#</th>
                             <th scope="col">Nombre</th>
@@ -48,6 +48,9 @@
                       <tbody id="productId">
 
                       </tbody>
+                      <tfoot id="totalRow">
+
+                      </tfoot>
                 </table>
             </div>
         </div>
